# display-observer-rs

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md
examples/: list_displays.rs  observe_config.rs  print_display_events.rs
src/: lib.rs  macos.rs  windows.rs
