[package]
name = "display-observer"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
version = "0.3.2"
default-features = false
features = ["CGError", "CGDirectDisplay", "CGDisplayConfiguration"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3.2"
default-features = false
features = ["NSApplication", "NSResponder"]
