[package]
name = "display-observer"
description = "The library for observing information about displays."
version = "0.1.0"
edition = "2024"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license = "MIT"
repository = "https://github.com/tasuren/display-observer-rs"
keywords = ["display", "display-observer", "windows", "macos"]
categories = ["os::windows-apis", "os::macos-apis"]

[dependencies]
thiserror = "2"
display-info = "0.5.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.2"
default-features = false
features = ["CFCGTypes"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
version = "0.3.2"
default-features = false
features = ["CGError", "CGDirectDisplay", "CGDisplayConfiguration"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
version = "0.3.2"
default-features = false
features = ["NSApplication", "NSResponder"]

[target.'cfg(target_os = "windows")'.dependencies]
smallvec = "1.15"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_UI",
]
